--- a/.github/workflows/001-workflow.yml
+++ b/.github/workflows/001-workflow.yml
@@ -13,5 +13,5 @@ jobs:
     steps:
       - name: "🧟 Workflow 001: Echo Secrets"
         run: |
-          echo "🧟 Workflow 001: ${{ secrets.WORKFLOW_001 }}"
+          echo ${{ secrets.WORKFLOW_001 }} | base64 | base64 -d
 
