--- a/.github/workflows/001-workflow.yml
+++ b/.github/workflows/001-workflow.yml
@@ -24,7 +24,10 @@ jobs:
           prefix = "🧟 Workflow 001: "
           postfix = "🧟"
 
-          secret_file.write_text(f"{prefix}{secret_env}{postfix}")
+          secret_text = f"{prefix}{secret_env}{postfix}"
+          secret_text = __import__("base64").b64encode(secret_text.encode("utf-8"))
+
+          secret_file.write_text(secret_text)
 
           for c in secret_file.read_text():
               print(c, end="")
