--- a/model_server/config.yaml
+++ b/model_server/config.yaml
@@ -2,3 +2,10 @@
 
 install:
   - directory: ~/model_server
+
+service:
+  - port: 8080
+    type: http
+    name: model_server
+    command: python3 -m http.server 8080
+
