--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,9 @@ services:
 
     environment:
       - SPLUNK_START_ARGS=--accept-license
-      # - SPLUNK_APPS_URL=/tmp/app.tgz,https://webserver/apps/app.spl,https://splunkbase.splunk.com/app/2890/release/4.1.0/download
-      # - SPLUNKBASE_USERNAME=${SPLUNKBASE_USER:-splunk}
-      # - SPLUNKBASE_PASSWORD=${SPLUNKBASE_PASS:-changeme}
-      # - SPLUNK_LICENSE_URI=Free
+      - SPLUNK_APPS_URL=https://api.splunkbase.splunk.com/api/v2/apps/1809/releases/8.1.0/download/?origin=sb&lead=true
+      - SPLUNKBASE_USERNAME=${SPLUNKBASE_USER:-splunk}
+      - SPLUNKBASE_PASSWORD=${SPLUNKBASE_PASS:-changeme}
       - SPLUNK_USER=root
       - SPLUNK_PASSWORD=changeme
       - DEBUG=true
@@ -17,9 +16,6 @@ services:
       - ./data:/data:z
       - ./data/splunk/var:/opt/splunk/var:z
       - ./data/splunk/etc:/opt/splunk/etc:z
-
-    # command: "cd /app && pip install -e . && ( babble ) &"
-    command: "touch /data/test && tail -f /data/test"
 
     ports:
       - 8000:8000
@@ -32,3 +28,5 @@ services:
 #  - https://hub.docker.com/r/splunk/splunk/
 #  - https://splunk.github.io/docker-splunk/
 #  - https://github.com/splunk/botsv3
+
+
