--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,9 @@ services:
 
     environment:
       - SPLUNK_START_ARGS=--accept-license
-      # Install the Stream and Zeek apps from Splunkbase.
+      # Install the required apps from local and remote(Splunkbase) repositories:
+      #   - Stream
+      #   - Zeek
       - SPLUNK_APPS_URL=https://api.splunkbase.splunk.com/api/v2/apps/1809/releases/8.1.0/download/?origin=sb&lead=true,https://api.splunkbase.splunk.com/api/v2/apps/5466/releases/1.0.5/download/?origin=sb&lead=true
       - SPLUNKBASE_USERNAME=${SPLUNKBASE_USER:-splunk}
       - SPLUNKBASE_PASSWORD=${SPLUNKBASE_PASS:-changeme}
@@ -13,7 +15,6 @@ services:
       - DEBUG=true
 
     volumes:
-      # - ../:/app:z
       - ./data:/data:z
       - ./data/splunk/var:/opt/splunk/var:z
       - ./data/splunk/etc:/opt/splunk/etc:z
@@ -31,5 +32,4 @@ services:
 #  - https://hub.docker.com/r/splunk/splunk/
 #  - https://splunk.github.io/docker-splunk/
 #  - https://github.com/splunk/botsv3
-
 
