--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,15 @@ venv/
 __private__/
 
 # Splunk Settings & Data
-data/splunk/etc/*
-!data/splunk/etc/.gitkeep
-!data/splunk/etc/splunk-launch.conf
-!data/splunk/etc/apps/splunk_app_stream/local/streamfwd.conf
+!data/splunk/.gitignore
 
-data/splunk/var/*
-!data/splunk/var/.gitkeep
+# data/splunk/etc/*
+# !data/splunk/etc/.gitkeep
+# !data/splunk/etc/splunk-launch.conf
+# !data/splunk/etc/apps/splunk_app_stream/local/streamfwd.conf
+
+# data/splunk/var/*
+# !data/splunk/var/.gitkeep
 
 
 # Byte-compiled / optimized / DLL files
