fix `streamfwd.conf` location

--- a/data/splunk/.gitignore
+++ b/data/splunk/.gitignore
@@ -3,9 +3,14 @@
 etc/*
 !etc/.gitkeep
 !etc/splunk-launch.conf
-# TODO: Remove this once we have a better allow list implementation
-!etc/streamfwd.conf
-# !etc/apps/splunk_app_stream/local/streamfwd.conf
+
+!etc/apps/
+etc/apps/*
+!etc/apps/splunk_app_stream/
+etc/apps/splunk_app_stream/*
+!etc/apps/splunk_app_stream/local/
+etc/apps/splunk_app_stream/local/*
+!etc/apps/splunk_app_stream/local/streamfwd.conf
 
 
 var/*
