--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -1,3 +1,13 @@
+# https://docs.splunk.com/Documentation/Splunk/9.0.3/admin/Inputsconf
 
 [splunktcp://9997]
 disabled = 0
+
+
+[monitor:///data/pcap]
+disabled = 0
+host = localhost
+index = pcap
+sourcetype = pcap
+blacklist = .*\.tmp$
+
