--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -1,12 +1,14 @@
 # https://docs.splunk.com/Documentation/Splunk/9.0.3/admin/Inputsconf
 
+[default]
+host = localhost
+
 [splunktcp://9997]
 disabled = 0
 
 
 [monitor:///data/pcap]
 disabled = 0
-host = localhost
 index = pcap
 sourcetype = pcap
 whitelist = .*\.(pcap|pcapng)$
