--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,13 @@ services:
     environment:
       - SPLUNK_START_ARGS=--accept-license
       # Install the required apps from local and remote(Splunkbase) repositories:
-      #   - Stream
-      #   - Zeek
-      - SPLUNK_APPS_URL=https://api.splunkbase.splunk.com/api/v2/apps/1809/releases/8.1.0/download/?origin=sb&lead=true,https://api.splunkbase.splunk.com/api/v2/apps/5466/releases/1.0.5/download/?origin=sb&lead=true
+      #   - Add-on for Stream Forwarders (5238)
+      #   - Splunk App for Stream (1809)
+      #   - TA for Zeek (5466)
+      - SPLUNK_APPS_URL=https://api.splunkbase.splunk.com/api/v2/apps/5238/releases/8.1.0/download/?origin=sb&lead=true,https://api.splunkbase.splunk.com/api/v2/apps/1809/releases/8.1.0/download/?origin=sb&lead=true,https://api.splunkbase.splunk.com/api/v2/apps/5466/releases/1.0.5/download/?origin=sb&lead=true
+
+
+
       - SPLUNKBASE_USERNAME=${SPLUNKBASE_USER:-splunk}
       - SPLUNKBASE_PASSWORD=${SPLUNKBASE_PASS:-changeme}
       - SPLUNK_USER=root
