--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -7,9 +7,9 @@ host = localhost
 disabled = 0
 
 
-[monitor:///data/pcap]
-disabled = 0
-index = pcap
-sourcetype = pcap
-whitelist = .*\.(pcap|pcapng)$
+# [monitor:///data/pcap]
+# disabled = 0
+# index = pcap
+# sourcetype = pcap
+# whitelist = .*\.(pcap|pcapng)$
 
