--- a/data/splunk/etc/apps/splunk_app_stream/local/streamfwd.conf
+++ b/data/splunk/etc/apps/splunk_app_stream/local/streamfwd.conf
@@ -1,6 +1,6 @@
 [streamfwd]
 streamfwdcapture.0.offline = true
-streamfwdcapture.0.interface = /data/pcap
+streamfwdcapture.0.interface = /data/ingest/pcap
 # streamfwdcapture.0.repeat = false
 
 
