clean up repo root

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ version = "0.0.1"
 
 name        = "babble"
 description = ""
-readme      = "README.md"
+readme      = ".github/README.md"
 license     = "MIT"
 
 dependencies = [
