--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,7 @@ services:
       #   - Splunk App for Stream (1809)
       #       https://api.splunkbase.splunk.com/api/v2/apps/1809/releases/8.1.0/download/?origin=sb&lead=true,
       - SPLUNK_APPS_URL=https://api.splunkbase.splunk.com/api/v2/apps/5238/releases/8.1.0/download/?origin=sb&lead=true,https://api.splunkbase.splunk.com/api/v2/apps/5466/releases/1.0.5/download/?origin=sb&lead=true
-
-
-
-      - SPLUNKBASE_USERNAME=${SPLUNKBASE_USER:-splunk}
+      # - SPLUNKBASE_USERNAME=${SPLUNKBASE_USER:-splunk}
       - SPLUNKBASE_PASSWORD=${SPLUNKBASE_PASS:-changeme}
       - SPLUNK_USER=root
       - SPLUNK_PASSWORD=changeme
