--- a/data/splunk/etc/apps/Splunk_TA_stream/local/streamfwd.conf
+++ b/data/splunk/etc/apps/Splunk_TA_stream/local/streamfwd.conf
@@ -1,4 +1,6 @@
 [streamfwd]
+# port = 8889
+# ipAddr = 127.0.0.1
 streamfwdcapture.0.offline = true
 streamfwdcapture.0.interface = /data/ingest/pcap
 # streamfwdcapture.0.repeat = false
