--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -7,9 +7,9 @@ host = localhost
 disabled = 0
 
 
-# [monitor:///data/logs]
-# disabled = 0
-# index = logs
-# sourcetype = logs
-# whitelist = .*\.log$
+[monitor:///data/ingest/zeek]
+disabled = 0
+index = zeek
+sourcetype = zeek:conn
+whitelist = ..*\.(log)$
 
