--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -9,7 +9,8 @@ disabled = 0
 
 [monitor:///data/ingest/zeek]
 disabled = 0
-index = zeek
-sourcetype = zeek:conn
+index = nsm
+sourcetype = zeek
 whitelist = .*\.(log)$
+blacklist=stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
 
