--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -7,7 +7,7 @@ host = localhost
 disabled = 0
 
 
-[monitor:///data/ingest/zeek]
+[monitor:///data/ingest/zeek/*]
 disabled = 0
 index = nsm
 sourcetype = zeek
