--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,10 @@ services:
       - SPLUNK_START_ARGS=--accept-license
       # Install the required apps from local and remote(Splunkbase) repositories:
       #   - Add-on for Stream Forwarders (5238)
+      #       https://api.splunkbase.splunk.com/api/v2/apps/5238/releases/8.1.0/download/?origin=sb&lead=true
       #   - TA for Zeek (5466)
-      - SPLUNK_APPS_URL=https://api.splunkbase.splunk.com/api/v2/apps/5238/releases/8.1.0/download/?origin=sb&lead=true,https://api.splunkbase.splunk.com/api/v2/apps/5466/releases/1.0.5/download/?origin=sb&lead=true
+      #       https://api.splunkbase.splunk.com/api/v2/apps/5466/releases/1.0.5/download/?origin=sb&lead=true
+      - SPLUNK_APPS_URL=https://api.splunkbase.splunk.com/api/v2/apps/5466/releases/1.0.5/download/?origin=sb&lead=true
       - SPLUNKBASE_USERNAME=${SPLUNKBASE_USER}
       - SPLUNKBASE_PASSWORD=${SPLUNKBASE_PASS}
       - SPLUNK_USER=root
