--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -3,14 +3,15 @@
 [default]
 host = localhost
 
+
 [splunktcp://9997]
 disabled = 0
 
 
 [monitor:///data/ingest/zeek/*]
-disabled = 0
-index = nsm
+disabled = false
+index =
 sourcetype = zeek
 whitelist = .*\.(log)$
-blacklist=stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
+blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
 
