--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -8,10 +8,52 @@ host = localhost
 disabled = 0
 
 
-[monitor:///data/ingest/zeek/*]
+# [monitor:///data/ingest/zeek/*]
+# disabled = false
+# index =
+# sourcetype = zeek
+# whitelist = .*\.(log)$
+# blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
+
+
+[monitor:///data/ingest/zeek/*/conn.log]
 disabled = false
 index =
-sourcetype = zeek
+sourcetype = bro_conn
 whitelist = .*\.(log)$
-blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
 
+[monitor:///data/ingest/zeek/*/http.log]
+disabled = false
+index =
+sourcetype = bro_http
+whitelist = .*\.(log)$
+
+[monitor:///data/ingest/zeek/*/weird.log]
+disabled = false
+index =
+sourcetype =
+whitelist = .*\.(log)$
+
+[monitor:///data/ingest/zeek/*/files.log]
+disabled = false
+index =
+sourcetype = bro_files
+whitelist = .*\.(log)$
+
+[monitor:///data/ingest/zeek/*/dns.log]
+disabled = false
+index =
+sourcetype = bro_dns
+whitelist = .*\.(log)$
+
+[monitor:///data/ingest/zeek/*/notice.log]
+disabled = false
+index =
+sourcetype = bro_notice
+whitelist = .*\.(log)$
+
+[monitor:///data/ingest/zeek/*/ssh.log]
+disabled = false
+index =
+sourcetype = bro_ssh
+whitelist = .*\.(log)$
