--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -19,7 +19,7 @@ disabled = 0
 [monitor:///data/ingest/zeek/*/conn.log]
 disabled = false
 index =
-sourcetype = bro_conn
+sourcetype = bro:conn:json
 whitelist = .*\.(log)$
 
 [monitor:///data/ingest/zeek/*/http.log]
