--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -25,7 +25,31 @@ whitelist = .*\.(log)$
 [monitor:///data/ingest/zeek/*/http.log]
 disabled = false
 index =
-sourcetype = bro_http
+sourcetype = bro:http:json
+whitelist = .*\.(log)$
+
+[monitor:///data/ingest/zeek/*/files.log]
+disabled = false
+index =
+sourcetype = bro:files:json
+whitelist = .*\.(log)$
+
+[monitor:///data/ingest/zeek/*/dns.log]
+disabled = false
+index =
+sourcetype = bro:dns:json
+whitelist = .*\.(log)$
+
+[monitor:///data/ingest/zeek/*/notice.log]
+disabled = false
+index =
+sourcetype = bro:notice:json
+whitelist = .*\.(log)$
+
+[monitor:///data/ingest/zeek/*/ssh.log]
+disabled = false
+index =
+sourcetype = bro:ssh:json
 whitelist = .*\.(log)$
 
 [monitor:///data/ingest/zeek/*/weird.log]
@@ -34,26 +58,3 @@ index =
 sourcetype =
 whitelist = .*\.(log)$
 
-[monitor:///data/ingest/zeek/*/files.log]
-disabled = false
-index =
-sourcetype = bro_files
-whitelist = .*\.(log)$
-
-[monitor:///data/ingest/zeek/*/dns.log]
-disabled = false
-index =
-sourcetype = bro_dns
-whitelist = .*\.(log)$
-
-[monitor:///data/ingest/zeek/*/notice.log]
-disabled = false
-index =
-sourcetype = bro_notice
-whitelist = .*\.(log)$
-
-[monitor:///data/ingest/zeek/*/ssh.log]
-disabled = false
-index =
-sourcetype = bro_ssh
-whitelist = .*\.(log)$
