--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -1,7 +1,7 @@
 # https://docs.splunk.com/Documentation/Splunk/9.0.3/admin/Inputsconf
 
 [default]
-host = localhost
+host = sensor
 
 
 [splunktcp://9997]
