--- a/data/splunk/etc/system/local/inputs.conf
+++ b/data/splunk/etc/system/local/inputs.conf
@@ -53,6 +53,6 @@ blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.l
 [monitor:///data/ingest/zeek/*/weird.log]
 disabled = false
 index = main
-sourcetype = zeek:json
+sourcetype = bro:json
 whitelist = .*\.(log)$
 blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
