--- a/data/splunk/.gitignore
+++ b/data/splunk/.gitignore
@@ -25,6 +25,13 @@ etc/apps/Splunk_TA_stream/*
 etc/apps/Splunk_TA_stream/local/*
 !etc/apps/Splunk_TA_stream/local/streamfwd.conf
 
+!etc/apps/Splunk_TA_zeek/
+etc/apps/Splunk_TA_zeek/*
+!etc/apps/Splunk_TA_zeek/local/
+etc/apps/Splunk_TA_zeek/local/*
+!etc/apps/Splunk_TA_zeek/local/inputs.conf
+!etc/apps/Splunk_TA_zeek/local/props.conf
+
 
 var/*
 !var/.gitkeep
