--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   # docker compose up babble
   # docker compose --profile model-server up
   babble:
-    image: nvidia/cuda:11.3.0-runtime-ubuntu20.04
+    image: nvidia/cuda:11.8.0-cudnn8-runtime-ubuntu22.04
     profiles: ["model-server"]
     restart: always
     working_dir: /app
@@ -13,7 +13,7 @@ services:
       - ./:/app:z
     ports:
       - 9000:9000
-    command: /bin/bash -c "python3 -m pip install --upgrade pip && python3 -m pip install -e . && python3 -m babble"
+    command: /bin/bash -c "python -m pip install --upgrade pip && python -m pip install -e . && python -m babble"
 
 
   # docker compose --profile siem-server up
