--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,13 @@ services:
       - ./:/app:z
     ports:
       - 9000:9000
-    command: /bin/bash -c "python -m pip install --upgrade pip && python -m pip install -e . && python -m babble"
+    command: >
+      /bin/bash -c " \
+        apt-get update && \
+        apt-get install -y git python3.9 python3-pip && \
+        python3 -m pip install --upgrade pip && \
+        python3 -m pip install -e . && \
+      python3 -m babble"
 
 
   # docker compose --profile siem-server up
