--- a/data/splunk/etc/apps/Splunk_TA_zeek/local/inputs.conf
+++ b/data/splunk/etc/apps/Splunk_TA_zeek/local/inputs.conf
@@ -3,49 +3,49 @@ host = sensor
 
 
 [monitor:///data/ingest/zeek/*/conn.log]
-disabled = false
+disabled = 0
 index = main
 sourcetype = bro:conn:json
-whitelist = .*\.(log)$
-blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
+# whitelist = .*\.(log)$
+# blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
 
 [monitor:///data/ingest/zeek/*/http.log]
-disabled = false
+disabled = 0
 index = main
 sourcetype = bro:http:json
 whitelist = .*\.(log)$
 blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
 
 [monitor:///data/ingest/zeek/*/files.log]
-disabled = false
+disabled = 0
 index = main
 sourcetype = bro:files:json
 whitelist = .*\.(log)$
 blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
 
 [monitor:///data/ingest/zeek/*/dns.log]
-disabled = false
+disabled = 0
 index = main
 sourcetype = bro:dns:json
 whitelist = .*\.(log)$
 blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
 
 [monitor:///data/ingest/zeek/*/notice.log]
-disabled = false
+disabled = 0
 index = main
 sourcetype = bro:notice:json
 whitelist = .*\.(log)$
 blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
 
 [monitor:///data/ingest/zeek/*/ssh.log]
-disabled = false
+disabled = 0
 index = main
 sourcetype = bro:ssh:json
 whitelist = .*\.(log)$
 blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
 
 [monitor:///data/ingest/zeek/*/weird.log]
-disabled = false
+disabled = 0
 index = main
 sourcetype = bro:json
 whitelist = .*\.(log)$
