--- a/data/splunk/etc/apps/Splunk_TA_zeek/local/inputs.conf
+++ b/data/splunk/etc/apps/Splunk_TA_zeek/local/inputs.conf
@@ -6,8 +6,8 @@ host = sensor
 disabled = 0
 index = main
 sourcetype = bro:conn:json
-# whitelist = .*\.(log)$
-# blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
+whitelist = .*\.(log)$
+blacklist = stderr|stdout|packet_filter|loaded_scripts|communication|reporter\.log$
 
 [monitor:///data/ingest/zeek/*/http.log]
 disabled = 0
